--- a/src/main/resources/static/css/member/update.css
+++ b/src/main/resources/static/css/member/update.css
@@ -85,3 +85,18 @@
     margin-right: 10px;
     font-size: 16px;
 }
+button[type="button"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+button[type="button"]:hover {
+    background-color: #0056b3;
+}
+a button[type="button"] {
+    color: white;
+}
