--- a/src/main/resources/templates/chatbot/chat.html
+++ b/src/main/resources/templates/chatbot/chat.html
@@ -27,7 +27,7 @@
             </dd>
             <dd id="chat-question" class="flex _between">
                 <span class="flex column center"><i></i></span>
-                <input type="text" id="question" placeholder="질문을 입력하세요">
+                <textarea name="question" id="question" cols="30" rows="1" placeholder="문의 사항을 입력하세요"></textarea>
                 <button type="button" id="btn-msg-sand" onclick="msgSendClickFn()">전송</button>
             </dd>
         </dl>
