--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -146,8 +146,11 @@
         </form>
         <!---------------->
         <!-- =============================================== -->
-        <div class="reply-con">
-          <div class="reply-write">
+        <div class="review-con">
+          <div class="review-title">
+            <h3>상품리뷰</h3>
+          </div>
+          <div class="review-write">
             <form id="replyForm" sec:authorize="isAuthenticated()">
               <input type="hidden" readonly name="productId" th:value="${product.id}" id="productId">
               <ul>
