--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -89,7 +89,7 @@
                     <!--                    랜덤하게-->
                     <li><a th:href="@{/}">상의</a></li>
                     <li><a th:href="@{/}">하의</a></li>
-                    <li><a th:href="@{/}">mast123123123123er</a></li>
+                    <li><a th:href="@{/}">제버ㅏㅎㄹ!!!!</a></li>
                     <li></li>
                 </ul>
             </div>
