공백 제거 및 사용 안하는 주석 제거

--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -78,6 +78,8 @@
                     </form>
                 </div>
                 <div class="replyList">
+                    <input type="hidden" readonly name="inqId"
+                           th:value="${inquiryDto.inqId}" th:id="inqId2">
                     <div id="replyCon" class="replyCon">
                     </div>
                 </div>
