--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <style>
-                .hidden {display:none}
+                .content {display:none}
             </style>
             <div class="reply-con">
                 <div class="title">
