--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -146,6 +146,9 @@
         </form>
         <!---------------->
         <!-- =============================================== -->
+        <style>
+          .review_content {display:none}
+        </style>
         <div class="review-con">
           <div class="review-title">
             <h3>상품리뷰</h3>
