자잘한 수정

--- a/src/main/resources/templates/member/findEmail.html
+++ b/src/main/resources/templates/member/findEmail.html
@@ -39,6 +39,7 @@
                         </li>
                     </ul>
                 </form>
+                <!--결과 메시지 출력-->
                 <div id="foundEmail" style="display: none;" class="foundEmail"></div>
             </div>
         </div>
