--- a/src/main/resources/static/css/product/detail.css
+++ b/src/main/resources/static/css/product/detail.css
@@ -279,8 +279,8 @@
 }
 
 
-
-.reply-con {
+/* 예진 */
+/* .reply-con {
   height: auto;
   width: 100%;
   margin-top: 40px;
@@ -296,7 +296,7 @@
   letter-spacing: -0.04rem;
   border-radius: 8px;
   padding: 16px;
-}
+} */
 
 
 
