--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -88,8 +88,8 @@
                     <li><a href="#top10">Top 10</a></li>
                     <!--                    랜덤하게-->
                     <li><a th:href="@{/}">상의</a></li>
-                    <li><a th:href="@{/}">sdfasdfa</a></li>
-                    <li><a th:href="@{/}">악세사리asdfasdf</a></li>
+                    <li><a th:href="@{/}">하의</a></li>
+                    <li><a th:href="@{/}">악세사리</a></li>
                     <li></li>
                 </ul>
             </div>
