--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -163,7 +163,7 @@
                   <label for="review"></label>
                 </li>
                 <li class="Btn">
-                  <input type="button" value="답글작성" id="reviewBtn">
+                  <input type="button" value="답글작성" id="reviewBtn" class="reviewBtn">
                 </li>
               </ul>
             </form>
