--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -59,9 +59,7 @@
             </div>
         </div>
         <div class="middle-nav">
-
-                <a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="HOME"></a>
-
+<!--                <a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="HOME"></a>-->
             <div class="middle-menu">
                 <ul>
                     <li><a th:href="@{/}">HOME</a></li>
